// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar should render with default styles 1`] = `
.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FAFBFC;
  border: 1px solid #D8DDE1;
  border-radius: 4px;
  position: relative;
  width: 100%;
  height: 8px;
  overflow: hidden;
}

.circuit-0::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 0%;
  background-color: #3388FF;
  border: 1px solid #1760CE;
  box-shadow: inset 0 1px 0 0 #AFD0FE;
  border-radius: calc(4px - 1px) 0 0 calc(4px - 1px);
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
}

.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  margin-left: 8px;
}

<div
  class="circuit-4 circuit-5"
>
  <span
    aria-labelledby="progress-bar_1"
    aria-valuemax="1"
    aria-valuemin="0"
    aria-valuenow="0"
    class="circuit-0 circuit-1"
    max="1"
    role="progressbar"
    value="0"
  />
  <span
    class="circuit-2 circuit-3"
    id="progress-bar_1"
  />
</div>
`;

exports[`ProgressBar should render with progress styles 1`] = `
.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
}

.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  margin-left: 8px;
}

.circuit-0 {
  background-color: #FAFBFC;
  border: 1px solid #D8DDE1;
  border-radius: 4px;
  position: relative;
  width: 100%;
  height: 8px;
  overflow: hidden;
}

.circuit-0::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 50%;
  background-color: #3388FF;
  border: 1px solid #1760CE;
  box-shadow: inset 0 1px 0 0 #AFD0FE;
  border-radius: calc(4px - 1px) 0 0 calc(4px - 1px);
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
}

<div
  class="circuit-4 circuit-5"
>
  <span
    aria-labelledby="progress-bar_2"
    aria-valuemax="1"
    aria-valuemin="0"
    aria-valuenow="0.5"
    class="circuit-0 circuit-1"
    max="1"
    role="progressbar"
    value="0.5"
  />
  <span
    class="circuit-2 circuit-3"
    id="progress-bar_2"
  />
</div>
`;
